<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detalle_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rommelpicon.desarrolloaplicaciondos.DetalleDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvNombreAplicacion2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:text="@string/tvnombreaplicacion"
            android:textAlignment="center"
            android:textSize="@dimen/texttitulo"
            android:textStyle="bold"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvConfirmarDatos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:text="@string/tvconfirmarDatos"
            android:textSize="@dimen/textConfirmarDatos"
            android:textStyle="bold"
            android:textAlignment="center"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTextoNombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textonombres"

            />

        <TextView
            android:id="@+id/tvNombreDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTextoApellidos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoapellidos"

            />

        <TextView
            android:id="@+id/tvApellidoDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTextoCumpleaños"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textofechanacimiento"

            />

        <TextView
            android:id="@+id/tvFechaDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTextoTelefono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textotelefono"

            />

        <TextView
            android:id="@+id/tvTelefonoDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTextoEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoemail"

            />

        <TextView
            android:id="@+id/tvEmailDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTextoDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textodescripcion"
            />

        <TextView
            android:id="@+id/tvDescripcionDestino"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:paddingLeft="@dimen/paddingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/buttonEditarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEditarDatos"
            android:theme="@style/MiBotton"
            />

    </LinearLayout>


</LinearLayout>
