<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rommelpicon.desarrolloaplicaciondos.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvNombreAplicacion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:text="@string/tvnombreaplicacion"
            android:textAlignment="center"
            android:textSize="@dimen/texttitulo"
            android:textStyle="bold"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvDescripcionAplicacion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_boton2"
            android:text="@string/tvdescripcionaplicacion"
            android:textSize="@dimen/textdescripcion"
            android:textStyle="normal"


            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tximputNombre"
            android:layout_width="@dimen/dimension_boton"
            android:layout_height="wrap_content"
            android:hint="@string/nombretximp"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/colorimputtextNombre"
            />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tximputApellidos"
                android:layout_width="@dimen/dimension_boton"
                android:layout_height="wrap_content"
                android:hint="@string/apellidostximp"
                android:layout_gravity="center_horizontal"

                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buttonpickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textopickerfecha"
            android:layout_gravity="center_horizontal"
            android:onClick="showDatePickerDialog"
            android:theme="@style/MiBotton"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/tvImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edad_48"
            />

        <TextView
            android:id="@+id/tvFechaInicio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvfecha"
            android:paddingLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tximputTelefono"
            android:layout_width="@dimen/dimension_boton"
            android:layout_height="wrap_content"
            android:hint="@string/telefonotximp"
            android:layout_gravity="center_horizontal"

            />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tximputEmail"
            android:layout_width="@dimen/dimension_boton"
            android:layout_height="wrap_content"
            android:hint="@string/emailtximp"
            android:layout_gravity="center_horizontal"

                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tximputDescripcion"
                android:layout_width="@dimen/dimension_boton"
                android:layout_height="wrap_content"
                android:hint="@string/descripciontximp"
                android:layout_gravity="center_horizontal"

                    />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/buttonsiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textosiguiente"
            android:theme="@style/MiBotton"

            />

    </LinearLayout>


</LinearLayout>
